Army: Made the random object a class field. Included a method that returns a random number based on the army size. Modified all the different unit methods. Modified the addAll method.